fix: flickering menu transition on ios

--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -87,6 +87,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 }
 
 .burger {
@@ -94,6 +96,8 @@
 	position: relative;
 	z-index: 1;
 	will-change: transform, rotate;
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 
 	&::after,
 	&::before {
@@ -123,6 +127,8 @@
 
 .burgerActive {
 	will-change: transform, rotate;
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 
 	&::after {
 		animation: downward 0.3s ease-in-out;
